--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passwordcli",
+  "name": "@npm-i-maaz/passwordcli",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
